--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,11 @@
-# render.yaml
+# render.yaml - Please use this exact version
+
 services:
-  # A PostgreSQL database
   - name: knote-database
-    type: postgres # <--- FIX: Changed from psql
-    psqlVersion: 17   # <--- FIX: Changed to a more common version
+    type: psql
+    psqlVersion: 17
     plan: free
 
-  # The Rails web service
   - name: knote
     type: web
     env: ruby
@@ -16,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromService:
-          type: postgres # <--- FIX: Changed from psql
+          type: psql
           name: knote-database
           property: connectionString
       - key: RAILS_MASTER_KEY
