--- a/config/database.yml
+++ b/config/database.yml
@@ -86,3 +86,11 @@ production:
   cable:
     <<: *default
     url: <%= ENV["DATABASE_URL"] %>
+
+  queue:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
+
+  cache:
+    <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
